--- a/terraform-config.yaml
+++ b/terraform-config.yaml
@@ -1,25 +1,14 @@
-org: ops360-systems
+org: ops360systems
 workspaces:
-- name: "manager"
+- name: "dio"
   description: "Dev workspace for dhruv dev"
   tags: ["aws", "eks", "dev"]
 teams:
-- name: "Platform-TGD-Employees-Access"
+- name: "dio-employees-access"
   tags: ["dev"]
   users: ["user1", "user2", "user3"]
-- name: "Platform-TGD-Employees-Permission"
-  tags: ["ops"]
-  users: ["user4"]
 permissions:
-- team: "Platform-TGD-Employees-Access"
-  workspace: "manager"
+- team: "dio-employees-access"
+  workspace: "dio"
   access: "admin"
-- team: "Platform-TGD-Employees-Permission"
-  workspace: "manager"
-  permissions:
-    runs: apply
-    variables: read
-    state_versions: read-outputs
-    sentinel_mocks: none
-    workspace_locking: false
-    run_tasks: true
+
